; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_concat_array.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_concat_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@DISP_E_UNKNOWNNAME = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i64*)* @concat_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @concat_array(i32* %0, %struct.TYPE_3__* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64 0, i64* %9, align 8
  br label %11

11:                                               ; preds = %48, %3
  %12 = load i64, i64* %9, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp slt i64 %12, %15
  br i1 %16, label %17, label %51

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i64, i64* %9, align 8
  %21 = call i32 @jsdisp_get_idx(i32* %19, i64 %20, i32* %8)
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* @DISP_E_UNKNOWNNAME, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %17
  br label %48

26:                                               ; preds = %17
  %27 = load i32, i32* %10, align 4
  %28 = call i64 @FAILED(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %26
  %31 = load i32, i32* %10, align 4
  store i32 %31, i32* %4, align 4
  br label %59

32:                                               ; preds = %26
  %33 = load i32*, i32** %5, align 8
  %34 = load i64*, i64** %7, align 8
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %9, align 8
  %37 = add nsw i64 %35, %36
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @jsdisp_propput_idx(i32* %33, i64 %37, i32 %38)
  store i32 %39, i32* %10, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @jsval_release(i32 %40)
  %42 = load i32, i32* %10, align 4
  %43 = call i64 @FAILED(i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %32
  %46 = load i32, i32* %10, align 4
  store i32 %46, i32* %4, align 4
  br label %59

47:                                               ; preds = %32
  br label %48

48:                                               ; preds = %47, %25
  %49 = load i64, i64* %9, align 8
  %50 = add nsw i64 %49, 1
  store i64 %50, i64* %9, align 8
  br label %11

51:                                               ; preds = %11
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = load i64*, i64** %7, align 8
  %56 = load i64, i64* %55, align 8
  %57 = add nsw i64 %56, %54
  store i64 %57, i64* %55, align 8
  %58 = load i32, i32* @S_OK, align 4
  store i32 %58, i32* %4, align 4
  br label %59

59:                                               ; preds = %51, %45, %30
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i32 @jsdisp_get_idx(i32*, i64, i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @jsdisp_propput_idx(i32*, i64, i32) #1

declare dso_local i32 @jsval_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
